--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -63,7 +63,8 @@ jobs:
             --baseURL "${{ steps.pages.outputs.base_url }}/"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
-
+        with:
+          path: ./public
   # Deployment job
   deploy:
     environment:
