Update cover image

--- a/piko/exampleSite/config.yml
+++ b/piko/exampleSite/config.yml
@@ -42,7 +42,7 @@ params:
   description: Personal Cybersecurity Blog
   math: false
   images:
-  - "/uploads/og.webp"
+  - "/uploads/molware.svg"
   label:
     title: m0lware
     text: Welcome to Piko
